--- a/app/resources/static/css/preview/wide_20x30.css
+++ b/app/resources/static/css/preview/wide_20x30.css
@@ -27,7 +27,7 @@
 }
 .fb-container .fb-row .photo.vertical:nth-child(odd) {
     margin-right: calc(0.4cm * var(--print-multiplier));
-    /* padding-right: calc(0.4cm * var(--print-multiplier)); */
+    margin-left: calc(0.15cm * var(--print-multiplier));
 }
 
 /* .fb-container .image-container {
