--- a/app/resources/static/css/print/square_20x30.css
+++ b/app/resources/static/css/print/square_20x30.css
@@ -29,14 +29,14 @@
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    display: flex;
-    align-items: flex-end;
 }
 
 /* code */
 .photo .code-main {
     width: 100%;
     text-align: center;
+    position: relative;
+    bottom: calc(50px * var(--print-multiplier));
 }
 .photo .code-container {
     display: none;
